# rind

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  update-changelog.yml
docs/: Makefile  conf.py  configuration.rst  how-it-works.rst  index.rst  installation.rst  usage.rst
rind/: __init__.py  _backend.py  _hooks.py  _metadata.py  _utils.py  _version_helpers.py
tests/: conftest.py  test_backend.py  test_errors.py  test_hooks.py  test_integration.py  test_metadata.py  test_standalone.py  test_utils.py  test_version_helpers.py
