[project]
name = "rind"
description = "A minimal PEP 517 build backend for creating metapackages"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Thomas Robitaille", email = "thomas.robitaille@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "packaging",
    "tomli; python_version < '3.11'",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]
keywords = ["packaging", "build", "metapackage", "pep517", "rind"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/astrofrog/rind"
Documentation = "https://rind.readthedocs.io"
Repository = "https://github.com/astrofrog/rind"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-copybutton",
]
test = [
    "pytest>=7.0",
    "build",
]
dev = [
    "ruff>=0.9",
    "pre-commit>=4.0",
    "tox>=4.0",
]

[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rind"]

[tool.setuptools_scm]
write_to = "rind/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["rind"]
